--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Newsreader">
+        <style>
+        body {
+          font-family: 'Newsreader', serif;
+          font-size: 18px;
+        }
+        </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>React Full Stack Application (made with Vite)</title>
   </head>
   <body>
     <div id="root"></div>
