--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,12 @@
   <body>
     <div id="root"></div>
     <script type="module">
-      import RefreshRuntime from "http://localhost:3000/@react-refresh";
+      import RefreshRuntime from "https://book-store-api-server.onrender.com//@react-refresh";
       RefreshRuntime.injectIntoGlobalHook(window);
       window.$RefreshReg$ = () => {};
       window.$RefreshSig$ = () => (type) => type;
       window.__vite_plugin_react_preamble_installed__ = true;
     </script>
-    <script type="module" src="http://localhost:3000/src/main.jsx"></script>
+    <script type="module" src="https://book-store-api-server.onrender.com//src/main.jsx"></script>
   </body>
 </html>
