--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module">
+    <!-- <script type="module">
       import RefreshRuntime from "https://book-store-api-server.onrender.com/@react-refresh";
       RefreshRuntime.injectIntoGlobalHook(window);
       window.$RefreshReg$ = () => {};
       window.$RefreshSig$ = () => (type) => type;
       window.__vite_plugin_react_preamble_installed__ = true;
-    </script>
-    <script type="module" src="https://book-store-api-server.onrender.com/src/main.jsx"></script>
+    </script> -->
+    <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
