--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,6 @@
       window.$RefreshSig$ = () => (type) => type;
       window.__vite_plugin_react_preamble_installed__ = true;
     </script> -->
-    <script type="module" src="../src/main.jsx"></script>
+    <script type="module" src="../src/main.js"></script>
   </body>
 </html>
