troubleshooting render round 6

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
           font-size: 18px;
         }
         </style>
+        <link rel='stylesheet' href="../src/app.css" />
+        <script type="module" src="../src/main.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Full Stack Application (made with Vite)</title>
   </head>
@@ -22,6 +24,6 @@
       window.$RefreshSig$ = () => (type) => type;
       window.__vite_plugin_react_preamble_installed__ = true;
     </script> -->
-    <script type="module" src="../src/main.js"></script>
+    <!-- <script type="module" src="../src/main.js"></script> -->
   </body>
 </html>
