--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Newsreader">
         <style>
@@ -10,20 +11,18 @@
           font-size: 18px;
         }
         </style>
-        <link rel='stylesheet' href="../src/app.css" />
-        <script type="module" src="../src/main.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Full Stack Application (made with Vite)</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- <script type="module">
-      import RefreshRuntime from "https://book-store-api-server.onrender.com/@react-refresh";
+    <script type="module">
+      import RefreshRuntime from "http://localhost:3000/@react-refresh";
       RefreshRuntime.injectIntoGlobalHook(window);
       window.$RefreshReg$ = () => {};
       window.$RefreshSig$ = () => (type) => type;
       window.__vite_plugin_react_preamble_installed__ = true;
-    </script> -->
-    <!-- <script type="module" src="../src/main.js"></script> -->
+    </script>
+    <script type="module" src="http://localhost:3000/src/main.jsx"></script>
   </body>
 </html>
