trying out css tweaks for background images

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
           font-size: 18px;
         }
         </style>
+      <link rel="stylesheet" href="http://localhost:4173/assets/main.css"
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Full Stack Application (made with Vite)</title>
   </head>
@@ -23,7 +24,7 @@
       window.$RefreshSig$ = () => (type) => type;
       window.__vite_plugin_react_preamble_installed__ = true;
     </script>
-    <script type="module" src="http://localhost:4173/src/main.jsx"></script>
+    <script type="module" src="http://localhost:4173/assets/main.js"></script>
     <!-- <script type="module" src="https://book-store-api-server.onrender.com/src/main.jsx"></script> -->
   </body>
 </html>
